add blog content

--- a/myFirstDjango/blog/posts/static/posts/post_detail.css
+++ b/myFirstDjango/blog/posts/static/posts/post_detail.css
@@ -15,9 +15,47 @@
 }
 
 .post-title {
-  font-size: 3rem;
   color: #fff;
-  margin-bottom: 3rem;
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+.post-tags {
+  margin-bottom: 2rem;
+}
+
+.post-tags span{
+  color: #5000ab;
+  background-color: #fff;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+}
+
+.read-later-form button,
+.read-later-form button:visited {
+  color: #fff;
+  background-color: #5000ab;
+  padding: 0.5rem 1rem;
+  border: 1px solid #fff;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.read-later-form button:hover,
+.read-later-form button:active {
+  color: #5000ab;
+  background-color: #fff;
+}
+
+.post-author a,
+.post-author a:visited {
+  color: #fff;
+}
+
+.post-author a:hover,
+.post-author a:active {
+  font-style: italic;
+  font-weight: bold;
 }
 
 .post-desc {
@@ -51,4 +89,136 @@
   color:#424242;
   box-shadow: 3px 3px 10px 5px rgba(0,0,0, 0.25);
   border-radius: 10px;
+}
+
+/* COMMENT */
+.comment-section {
+  /* display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 1rem; */
+  margin: 2rem auto;
+  width: 90%;
+  max-width: 30rem;
+  padding: 1rem;
+  border-radius: 8px;
+  background-color: #fff;
+  box-shadow: 0px 2px 8px rgba(0,0,0, 0.25);
+}
+
+.form-control {
+  margin-bottom: 1rem;
+}
+
+.form-control label {
+  display: block;
+  margin-bottom: 0.25rem;
+}
+
+.form-control label {
+  font-weight: bold;
+}
+
+.form-control input,
+.form-control textarea {
+  display: block;
+  width: 100%;
+  font: inherit;
+  padding: 0.25rem;
+  border-radius: 6px;
+}
+
+.form-control input:focus,
+.form-control textarea:focus {
+  background-color: #f3eafd;
+}
+
+.comment-section button,
+.comment-section button:visited {
+ background: none;
+ background-color: #5000ab;
+ color: #fff;
+ border-radius: 6px;
+ padding: 0.5rem 1.5rem;
+ font-size: 1rem;
+}
+
+.comment-section button:hover,
+.comment-section button:active {
+  cursor: pointer;
+  background-color: #6a00e2;
+}
+
+/* READ-ME-LATER */
+
+/* COMMENT ERROR MESSAGE */
+.errorlist {
+  list-style: none;
+  margin: 0.5rem 0;
+  padding: 0;
+  color: #b51919;
+}
+.invalid {
+  color: #b51919;
+}
+
+/* ALERT MESSAGE */
+.error-box {
+  width: 90%;
+  max-width: 40rem;
+  margin: 1rem 0;
+  padding: 1rem;
+  border: 1px solid #b51919;
+  background-color: #ffe6e7;
+  }
+  
+.error-box h2 {
+  color: #b51919;
+}
+
+.error-box p {
+  margin-bottom: 0.5rem;
+}
+
+.error-box a,
+.error-box a:visited {
+  text-decoration: none;
+  cursor: pointer;
+  background-color: #b51919;
+  color: #fff;
+  padding: 0.25rem 0.75rem;
+  border-radius: 6px;
+}
+
+.comments-section {
+  margin: 2rem auto;
+  width: 90%;
+  max-width: 40rem;
+  padding: 1rem 2rem;
+  border-radius: 8px;
+  background-color: #fff;
+  box-shadow: 0px 2px 8px rgba(0,0,0, 0.25);
+}
+
+.comments-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.comments-list li {
+  margin-bottom: 1rem;
+  border-bottom: 2px solid #ccc;
+}
+
+.comments-list li:last-child {
+  border-bottom: none;
+}
+
+.comments-list li h2 {
+  color: #807f7f;
+}
+
+.comments-list li p {
+  margin-bottom: 0.5rem;
 }
