--- a/myFirstDjango/blog/posts/templates/posts/index.html
+++ b/myFirstDjango/blog/posts/templates/posts/index.html
@@ -12,11 +12,11 @@
   <section class="header-section">
     <div class="blog-author-info">
       <img src="{% static 'posts/images/bb-bg1.jpg' %}" alt="max's image" class="author-image">
-      <h1 class="blog-title">MAXIMILIAN'S BLOG</h1>
+      <h1 class="blog-title">MY BLOG</h1>
     </div>
-    <p class="blog-desc">Hi, I'm Max and I love to blog about tech and the world!</p>
+    <p class="blog-desc">Hi, I'm Dev and I love to blog about tech and the world!</p>
   </section>
-
+  
   <section class="main">
     <h2 class="">My Latest Thoughts</h2>
     <div class="post-container">
