--- a/myFirstDjango/blog/posts/static/posts/post_card.css
+++ b/myFirstDjango/blog/posts/static/posts/post_card.css
@@ -13,6 +13,7 @@
   align-items: center;
   justify-content: center;
   width: 14rem;
+  height: 18rem;
   padding: 1.6rem 1rem;
   box-shadow: 3px 3px 10px 5px rgba(0,0,0, 0.25);
   border-radius: 10px;
