--- a/myFirstDjango/blog/posts/templates/posts/post_detail.html
+++ b/myFirstDjango/blog/posts/templates/posts/post_detail.html
@@ -8,14 +8,36 @@
 {% block title %} {{ post.title }} {% endblock %}
 
 {% block content %}
+  
+    {% if comment_form.errors %}
+    <div class="error-box">
+      <h2>Saving comment failed!</h2>
+      <p>Please check the comment form below and fix your errors.</p>
+      <a href="#comment-form">Fix Now!</a>
+    </div>
+    {% endif %}
+  
+
   <section class="section-post-detail">
     <div class="post-title-container">
-      <p class="post-title">{{ post.title | title }}</p>
+      <div>
+        <p class="post-title">{{ post.title | title }}</p>
+        <div class="post-tags">
+            {% for tag in tags %}
+            <span>{{ tag.caption|title }}</span>
+            {% endfor %}
+        </div>
+        <form class="read-later-form" action="{% url 'read-later' %}" method="POST">
+          {% csrf_token %}
+          <input type="hidden" name="post_id" value="{{ post.id }}">
+          <button>Read Later</button>
+        </form>
+      </div>
       <div class="post-desc">
-        <img src="{% static 'posts/images/'|add:post.image %}" alt="" class="post-image">
+        <img src="{{ post.image.url }}" alt="" class="post-image">
         <div class="post-desc-text">
-          <p class="post-author">By {{ post.author }}</p>
-          <p class="post-posted">Last updated on {{ post.posted }}</p>
+          <p class="post-author">By <a href="mailto:{{ post.author.email }}">{{ post.author }}</a></p>
+          <p class="post-posted">Last updated on {{ post.posted|date:"d M Y" }}</p>
         </div>
       </div>
     </div>
@@ -23,5 +45,33 @@
     <div class="post-content">
       <p>{{ post.content | linebreaks }}<p>
     </div>
+  </section>
+
+  <section class="comments-section">
+    {% if comments %}
+      <ul class="comments-list">
+        {% for comment in comments %}
+          <li>
+            <h2>{{ comment.username }}</h2>
+            <p>{{ comment.text | linebreaks }}<p>
+          </li>
+        {% endfor %}
+      </ul>
+    {% endif %}
+  </section>
+
+  <section class="comment-section">
+    <h3 class="comment-ttile">Leave Your Comment Below</h3>
+    <form id="comment-form" action="{% url 'post-detail' post.slug %}" method="POST">
+      {% csrf_token %}
+      {% for field in comment_form %}
+        <div class="form-control {% if field.errors %}invalid{% endif %}">
+          {{ field.label_tag }}
+          {{ field }}
+          {{ field.errors }}
+        </div>
+      {% endfor %}
+      <button>Save Comment</button>
+    </form>
   </section>
 {% endblock %}
