--- a/myFirstDjango/blog/static/posts/post_detail.css
+++ b/myFirstDjango/blog/static/posts/post_detail.css
@@ -69,8 +69,8 @@
 }
 
 .post-image {
-  /* width: 7rem;
-  height: 7rem; */
+  width: 7rem;
+  height: 7rem;
   border: 3px solid #fff;
   border-radius: 10px;
   transform: rotate(5deg);
@@ -120,7 +120,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  width: 30%;
+  /* width: 30%; */
 }
 
 .comments-list li {
