--- a/myFirstDjango/blog/posts/templates/posts/includes/post_card.html
+++ b/myFirstDjango/blog/posts/templates/posts/includes/post_card.html
@@ -4,9 +4,13 @@
   {% for post in posts %}
     <a href="{% url 'post-detail' post.slug %}" class="post-link">
       <div class="post-card">
-        <img src="{{ post.image.url }}" alt="post-image" class="post-image">
-        <h3 class="post-title">{{ post.title }}</h3>
-        <p class="post-desc">{{ post.excerpt }}</p>
+        <div class="post-head">
+          <img src="{{ post.image.url }}" alt="post-image" class="post-image">
+        </div>
+        <div class="post-text">
+          <h3 class="post-title">{{ post.title }}</h3>
+          <p class="post-desc">{{ post.excerpt }}</p>
+        </div>
       </div>
     </a>
   {% endfor %}
