--- a/myFirstDjango/blog/staticfiles/posts/post_card.css
+++ b/myFirstDjango/blog/staticfiles/posts/post_card.css
@@ -11,11 +11,15 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 15rem;
+  width: 14rem;
   height: 18rem;
   padding: 1.6rem 1rem;
   box-shadow: 3px 3px 10px 5px rgba(0,0,0, 0.25);
   border-radius: 10px;
+}
+
+.post-head {
+  height: 40%;
 }
 
 .post-image {
