--- a/myFirstDjango/blog_test/posts/templates/posts/post.html
+++ b/myFirstDjango/blog_test/posts/templates/posts/post.html
@@ -21,13 +21,15 @@
     <section class="comment">
         <h3 class="comment-title">Comments</h3>
         <ul class="comment-list">
-            {% for comment in post.comments %}
-                <li class="comment-item">{{ comment.content }}</li>
-            {% endfor %}
+            {% if comments %}
+                {% for comment in comments %}
+                    <li class="comment-item">{{ comment.content }}</li>
+                {% endfor %}
+            {% endif %}
         </ul>
         <div class="comment-form">
             <h3 class="comment-leave-title">Leave Your Comment Below😘</h3>
-            <form method="POST" action="{% url 'post' post.id %}">
+            <form method="POST" action="{{ post.get_absolute_url }}">
                 {% csrf_token %}
                 {{ form }}
                 <button type="submit" class="comment-button">Submit</button>
