--- a/myFirstFlask/flaskblog/flaskblog/templates/register.html
+++ b/myFirstFlask/flaskblog/flaskblog/templates/register.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
 {% block css_file %}<link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}">{% endblock %}
-{% block title %}Login Page{% endblock %}
+{% block title %}Register Page{% endblock %}
 
 {% block content %}
     <div class="card">
-        <h2 class="card-title">Login</h2>
+        <h2 class="card-title">Register</h2>
         <form class="login-form" action="" method="POST">
             {{ form.csrf_token }}
             <div class="form-control">
@@ -17,6 +17,17 @@
                     {% endfor %}
                 {% endif %}
             </div>
+
+            <div class="form-control">
+              {{ form.email.label }}
+              {{ form.email }}
+              {% if form.email.errors %}
+                  {% for error in form.email.errors %}
+                      <div class="form-invalid">{{ error }}</div>
+                  {% endfor %}
+              {% endif %}
+          </div>
+
             <div class="form-control">
                 {{ form.password.label }}
                 {{ form.password }}
@@ -27,15 +38,20 @@
                 {% endif %}
             </div>
 
-            <div class="form-remember">
-                {{ form.remember }}
-                {{ form.remember.label }}
-            </div>
+            <div class="form-control">
+              {{ form.confirm_password.label }}
+              {{ form.confirm_password }}
+              {% if form.confirm_password.errors %}
+                  {% for error in form.confirm_password.errors %}
+                      <div class="form-invalid">{{ error }}</div>
+                  {% endfor %}
+              {% endif %}
+          </div>
 
             <div class="form-control">
                 {{ form.submit }}
             </div>
         </form>
-        <span class="register-text">Does not have a account? <a href="{{ url_for('main.register') }}">Register</a></span>
+        <span class="register-text">Already have a account? <a href="{{ url_for('main.login') }}">Login</a></span>        
     </div>
 {% endblock %}
