--- a/myFirstFlask/flaskblog/flaskblog/static/login.css
+++ b/myFirstFlask/flaskblog/flaskblog/static/login.css
@@ -1,6 +1,7 @@
 .card {
-    height: 25rem;
-    margin-top: 5rem;
+    /* height: 30rem; */
+    /* margin-top: 5rem; */
+    padding: 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -9,12 +10,11 @@
     border: none;
     border-radius: 12px;
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.65);
-    padding: 0 3rem;
 }
 
 .form-control {
     margin-bottom: 1rem;
-    font-size: 1.2rem;
+    font-size: 0.8rem;
 }
 
 .form-control:last-child {
@@ -36,6 +36,11 @@
     background-color: rgb(255, 247, 255);
 }
 
+.form-remember {
+    margin-bottom: 0.5rem;
+    font-size: 0.8rem;
+}
+
 .register-text {
     font-size: 0.8rem;
     color: #6e6e6e;
@@ -48,4 +53,9 @@
 
 .register-text a:hover {
     color: rgb(73, 183, 226);
+}
+
+.form-invalid {
+    color: #ff0000;
+    font-size: 0.8rem;
 }
