--- a/myFirstFlask/flaskblog/flaskblog/templates/register.html
+++ b/myFirstFlask/flaskblog/flaskblog/templates/register.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block css_file %}<link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}">{% endblock %}
+{% block css_file %}<link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">{% endblock %}
 {% block title %}Register Page{% endblock %}
 
 {% block content %}
@@ -8,9 +8,9 @@
         <h2 class="card-title">Register</h2>
         <form class="login-form" action="" method="POST">
             {{ form.csrf_token }}
-            <div class="form-control">
+            <div class="form-group">
                 {{ form.username.label }}
-                {{ form.username }}
+                {{ form.username(class="form-control mb-2") }}
                 {% if form.username.errors %}
                     {% for error in form.username.errors %}
                         <div class="form-invalid">{{ error }}</div>
@@ -18,9 +18,9 @@
                 {% endif %}
             </div>
 
-            <div class="form-control">
+            <div class="form-group">
               {{ form.email.label }}
-              {{ form.email }}
+              {{ form.email(class="form-control mb-2") }}
               {% if form.email.errors %}
                   {% for error in form.email.errors %}
                       <div class="form-invalid">{{ error }}</div>
@@ -28,9 +28,9 @@
               {% endif %}
           </div>
 
-            <div class="form-control">
+            <div class="form-group">
                 {{ form.password.label }}
-                {{ form.password }}
+                {{ form.password(class="form-control mb-2") }}
                 {% if form.password.errors %}
                     {% for error in form.password.errors %}
                         <div class="form-invalid">{{ error }}</div>
@@ -38,9 +38,9 @@
                 {% endif %}
             </div>
 
-            <div class="form-control">
+            <div class="form-group">
               {{ form.confirm_password.label }}
-              {{ form.confirm_password }}
+              {{ form.confirm_password(class="form-control mb-2") }}
               {% if form.confirm_password.errors %}
                   {% for error in form.confirm_password.errors %}
                       <div class="form-invalid">{{ error }}</div>
@@ -48,8 +48,8 @@
               {% endif %}
           </div>
 
-            <div class="form-control">
-                {{ form.submit }}
+            <div class="form-group">
+                {{ form.submit(class="btn btn-dark") }}
             </div>
         </form>
         <span class="register-text">Already have a account? <a href="{{ url_for('main.login') }}">Login</a></span>        
