--- a/myFirstFlask/flaskblog/flaskblog/static/style.css
+++ b/myFirstFlask/flaskblog/flaskblog/static/style.css
@@ -9,6 +9,13 @@ html {
     font-size: 1rem;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 nav {
     height: 5rem;
     width: 100%;
@@ -17,22 +24,14 @@ nav {
     justify-content: space-between;
     gap: 2rem;
     padding: 0 5rem;
-    background-color: #6b00cf;
+    background-color: #000;
 }
 
 .nav-item {
-    display: inline-block;
-    padding: 0.5rem 1.2rem;
     margin-right: 0.5rem;
-    font-size: 1rem;
-    background-color: #ececec;
-    text-decoration: none;
-    color: #6b00cf;
-    border-radius: 12px;
 }
 
 .nav-item:hover {
-    cursor: pointer;
     background-color: #fff;
 }
 
@@ -70,4 +69,102 @@ nav {
 
 .flashes .info {
     background-color: #b5fee0;
+}
+
+/* CARD(LOGIN & REGISTER) */
+.card {
+    /* height: 30rem; */
+    /* margin-top: 5rem; */
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    border: none;
+    border-radius: 12px;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.65);
+}
+
+.card-title {
+    margin-bottom: 0;
+}
+
+/* FORM */
+.form-group {
+    /* margin-bottom: 0.5rem; */
+}
+
+.form-group label {
+    display: block;
+}
+
+.form-invalid {
+    color: #ff0000;
+    font-size: 0.8rem;
+}
+
+/* POST CARD ON HOMEPAGE */
+.post-card {
+    /* display: flex;
+    gap: 1rem; */
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    border-radius: 12px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.65);
+    padding: 1rem 2rem;
+}
+
+.post-card-left {
+    display: flex;
+    align-items: start;
+    gap: 1rem;
+}
+
+.post-author-image {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 100%;
+}
+
+.post-area {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.post-info {
+    width: 200%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom: 0.5rem;
+    border-bottom: 1px solid #5e5e5e;
+}
+
+.post-info .btn {
+    font-size: 0.8rem;
+}
+
+.post-author-link {
+    text-decoration: none;
+    color: rgb(73, 203, 255);
+}
+
+.post-date {
+    font-size: 0.8rem;
+    color: #5e5e5e;
+}
+
+.post-link {
+    text-decoration: none;
+    color: #333;
+}
+
+.post-content {
+    white-space: pre-wrap;
+}
+
+.post-card-right {
+    width: 30%;
 }
