--- a/myFirstFlask/flaskblog/flaskblog/templates/base.html
+++ b/myFirstFlask/flaskblog/flaskblog/templates/base.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     {% block css_file %}{% endblock %}
     <title>{% block title %}{% endblock %}</title>
@@ -10,16 +12,17 @@
 <body>
    
         <nav>
-            <a href="{{ url_for('main.home') }}" class="nav-item">Home</a>
+            <a href="{{ url_for('main.home') }}" class="btn btn-light nav-item">Home</a>
             {% if current_user.is_authenticated %}
                 <div>
-                    <a href="{{ url_for('main.account') }}" class="nav-item">{{ current_user.username }}</a>
-                    <a href="{{ url_for('main.logout') }}" class="nav-item">Logout</a>
+                    <a href="{{ url_for('users.account') }}" class="btn btn-light nav-item">{{ current_user.username }}</a>
+                    <a href="{{ url_for('posts.new_post') }}" class="btn btn-light nav-item">New Post</a>
+                    <a href="{{ url_for('main.logout') }}" class="btn btn-light nav-item">Logout</a>
                 </div>
             {% else %}
                 <div>
-                    <a href="{{ url_for('main.login') }}" class="nav-item">Login</a>
-                    <a href="{{ url_for('main.register') }}" class="nav-item">Register</a>
+                    <a href="{{ url_for('main.login') }}" class="btn btn-light nav-item">Login</a>
+                    <a href="{{ url_for('main.register') }}" class="btn btn-light nav-item">Register</a>
                 </div>
             {% endif %}
         </nav>
